Fixed dialog rounded border overlap

--- a/themes/aura/aura-light/extensions/_dialog.scss
+++ b/themes/aura/aura-light/extensions/_dialog.scss
@@ -1,5 +1,6 @@
 .p-dialog {
     border-radius: $contentBorderRadius;
+    background-color: $dialogHeaderBg;
     
     .p-dialog-header {
         border-top-right-radius: $contentBorderRadius;
